добавил в проект статику. добавил свеггер круд методы для девайс. закончил сервер. по крайне мере пока.
