# server/routes/deviceRouter.js
@@ -3,9 +3,9 @@ const deviceController = require('../controllers/DeviceController');
 const Router = require('express');
 const router = new Router();
 
-router.post('/', deviceController.create);
-router.get('/', deviceController.getAll);
-router.get('/:id', deviceController.getById);
-router.delete('/:id', deviceController.delete);
+router.post('/create', deviceController.create);
+router.get('/get', deviceController.getAll);
+router.get('/get:id', deviceController.getById);
+router.delete('/delete:id', deviceController.delete);
 
 module.exports = router;
